time transfer to ns + test updated